# MATH5380-GTAA-Project2

./: .gitignore  README.md  SUPPLEMENTARY_ANALYSIS.md  env.yml  pyproject.toml  requirements.txt
config/: project2_gtaa_expanded.yaml  project2_gtaa_mom_carry.yaml
data/raw/: Data for final project 2 .xlsx  multi_asset_coverage.csv  multi_asset_universe.xlsx
notebooks/: 09_no_lookahead_verification.ipynb  FINAL_SUBMISSION.ipynb
outputs/: MATH5380 Report.docx
scripts/: add_fx_data.py  build_final_submission_notebook.py  build_no_lookahead_notebook.py  build_report_docx.py  build_visualisations_notebook.py  generate_visualizations.py  pull_universe_data.py
src/gtaa/: __init__.py  config.py  models.py
src/gtaa/analytics/: __init__.py  attribution.py  diagnostics.py  drawdown.py  performance.py  qa_checks.py  risk_tables.py
src/gtaa/data/: __init__.py  alignment.py  cleaning.py  validation.py
src/gtaa/factors/: __init__.py  base.py  carry.py  downside_vol.py  drawdown_resilience.py  low_vol.py  macro_scores.py  (+5 more)
tests/: test_covariance.py  test_date_alignment.py  test_expanded_backtest_integration.py  test_expanded_factor_family_construction.py  test_expanded_factor_family_scaling.py  test_expanded_no_lookahead.py  test_factor_weights.py  test_fi_momentum_signal.py  test_fx_carry_signal.py  test_fx_momentum_signal.py  test_hw1_replication.py  test_hw2_replication.py  test_no_lookahead_covariance.py  test_no_lookahead_portfolio_returns.py  test_no_lookahead_signals.py  test_performance_stats.py  test_rank_direction.py  test_turnover.py  test_vol_scaling.py
(+31 files in other folders)
