[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gtaa"
version = "0.1.0"
description = "Long/Short Factor GTAA – MATH 5380 Project 2"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
    "scipy>=1.11",
    "openpyxl>=3.1",
    "matplotlib>=3.8",
    "ipywidgets>=8.1",
    "yfinance>=0.2",
    "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
